Fixed spacing in lg media Infobar admin

--- a/style/style.css
+++ b/style/style.css
@@ -131,7 +131,7 @@ aside{
 }
 
 .my_fs-elements{
-    font-size: 0.2rem;
+    font-size: 1.2rem;
 }
 
 /*BOTTOM NAV Media*/
